Prevents facet gutter shift for empty searches

--- a/styleguide/source/assets/scss/04-templates/_two_column-left.scss
+++ b/styleguide/source/assets/scss/04-templates/_two_column-left.scss
@@ -96,6 +96,9 @@ body.search-results {
       padding-right: 20px;
       max-width: 280px;
     }
+    @include breakpoint($bp-large) {
+      min-width: 280px;
+    }
     .ama__filter {
       border-top: 1px solid $gray-20;
       border-bottom: 1px solid $gray-20;
